--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.29)
 project(CPPHashCracker)
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(CPPHashCracker main.cpp)
+add_executable(CPPHashCracker main.cpp
+        encryption.cpp
+        encryption.h)
